<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lamespy</string>
    <string name="add_location">Add this location</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">io.simao.lamespy.PREFERENCE_FILE_KEY</string>
    <string name="saved_locations_key">saved_locations_key</string>
    <string name="current_location_desc">Current Location: </string>
    <string name="location_available_desc">Location Available: </string>
    <string name="update_status">Update Status</string>
    <string name="action_dump_log_console">Dump Log</string>
    <string name="title_activity_location_dump">Location History</string>
    <string name="action_show_dump">Show History</string>
    <string name="location_event_detail_dialog_message">Location Event Detail</string>
    <string name="merge_locations">Location with name %s already exists.\\nDo you wish to merge the existent location with the new one?</string>
    <string name="action_dump_log_share">Send History</string>
</resources>
