<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_dump_log_console"
          android:title="@string/action_dump_log_console"
          android:orderInCategory="0"
          android:showAsAction="never" />

    <item android:id="@+id/action_dump_log_share"
          android:title="@string/action_dump_log_share"
          android:orderInCategory="0"
          android:showAsAction="never" />


    <item android:id="@+id/action_show_dump"
          android:title="@string/action_show_dump"
          android:orderInCategory="100"
          android:showAsAction="never" />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="200"
          android:showAsAction="never" />


</menu>
