<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainFragment">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/current_location_desc"
        android:text="@string/current_location_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/current_location"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/current_location_desc"/>

    <TextView
            android:id="@+id/location_available_desc"
            android:text="@string/location_available_desc"
            android:layout_below="@+id/current_location_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/location_available"
            android:text=""
            android:layout_below="@+id/current_location_desc"
            android:layout_toRightOf="@id/location_available_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button android:layout_below="@+id/location_available_desc"
            android:id="@+id/b_add_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_location"/>

    <Button android:id="@+id/b_update_status"
            android:layout_below="@+id/b_add_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_status"/>


</RelativeLayout>

</ScrollView>
